--- a/ReadME
+++ b/ReadME
@@ -1,1 +1,7 @@
 This repo where castone project on Gen AI based Policy Generator details and file generatod by the LLM are saved 
+
+To more about project and code details check the kaggle link 
+https://www.kaggle.com/code/sunray03/generative-ai-for-cybersecurity-policy-creation
+
+Check out blog for this project 
+https://medium.com/@rashr444/my-capstone-project-from-googles-genai-intensive-explained-simply-895e30a15578
